# prompty

./: Cargo.toml  Dockerfile  README.md  fly.toml
.do/: deploy.template.yaml
.github/workflows/: master.yml
src/: main.rs  openai.rs
