[package]
name = "prompty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
thiserror = "1"
poise = "0.5"
dotenv = "0.15"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.24", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
serde = "1.0"
serde_json = "1.0"
sentry = { version = "0.31.0", features = ["profiling"] }
tracing = "0.1.37"
